--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,13 @@
       <version>2.3</version>
     </dependency>
 
+    <!-- 分页插件 -->
+    <dependency>
+      <groupId> com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.0.0</version>
+    </dependency>
+
 
 
 
